--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
   justify-content: center;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .navbar li {
@@ -55,15 +56,41 @@ body {
   height: 100%;
 }
 
-.people-data ul li {
-  list-style: none;
-  margin: 0.2rem;
+/* People Data*/
+
+.people-data h1 {
+  background-color: white;
+  color: black;
+  padding: 1rem;
 }
+
+.people-data-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card-item {
+  width: 15rem;
+  height: 20rem;
+  background-color: red;
+  opacity: 0.5;
+  margin: 1px;
+}
+
+.card-item h4 {
+  color: black;
+  font-size: 1.3rem;
+}
+
+/* Planets Data*/
 
 .planets-data ul li {
   list-style: none;
   margin: 0.2rem;
 }
+
+/* Films Data*/
 
 .films-data ul li {
   list-style: none;
