--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,10 @@ body {
 }
 
 .navbar li a {
-  padding: 2rem;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   text-decoration: none;
   color: black;
   background-color: #3b6978;
@@ -46,6 +49,15 @@ body {
   color: white;
 }
 
+/* Home Content */
+.home-content {
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding: 5rem;
+  opacity: 0.6;
+}
+
 /* Body content*/
 
 .body-content {
@@ -62,6 +74,7 @@ body {
   background-color: white;
   color: black;
   padding: 1rem;
+  opacity: 0.7;
 }
 
 .people-data-card {
@@ -70,31 +83,74 @@ body {
   justify-content: center;
 }
 
-.card-item {
+.people-card-item {
   width: 15rem;
   height: 20rem;
   background-color: red;
-  opacity: 0.5;
+  opacity: 0.6;
   margin: 1px;
 }
 
-.card-item h4 {
+.people-card-item h4 {
   color: black;
   font-size: 1.3rem;
 }
 
 /* Planets Data*/
 
-.planets-data ul li {
-  list-style: none;
-  margin: 0.2rem;
+.planets-data h1 {
+  background-color: white;
+  color: black;
+  padding: 1rem;
+  opacity: 0.7;
+}
+
+.planets-data-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.planets-card-item {
+  width: 15rem;
+  height: 20rem;
+  background-color: red;
+  opacity: 0.6;
+  margin: 1px;
+}
+
+.planets-card-item h4 {
+  color: black;
+  font-size: 1.1rem;
 }
 
 /* Films Data*/
 
-.films-data ul li {
-  list-style: none;
-  margin: 0.2rem;
+.films-data h1 {
+  background-color: white;
+  color: black;
+  padding: 1rem;
+  opacity: 0.7;
+}
+
+.films-data-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.film-card-item {
+  width: 20rem;
+  height: 25rem;
+  background-color: red;
+  opacity: 0.6;
+  margin: 1px;
+  padding: 1rem;
+}
+
+.film-card-item h4 {
+  color: black;
+  font-size: 1.1rem;
 }
 
 /* Bottom */
@@ -122,4 +178,10 @@ body {
 .bottom .golive {
   width: 3rem;
   height: 3rem;
+}
+
+@media (max-width: 700px) {
+  .navbar li a {
+    padding: 1.3rem;
+  }
 }
