--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,25 @@ body {
   font-size: 1.5rem;
 }
 
+.pagination {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  opacity: 0.5;
+}
+
+.pagination a {
+  background-color: #fff;
+  color: #333;
+  margin-left: 0.8rem;
+  margin-right: 0.8rem;
+  padding: 0.5rem;
+  text-decoration: none;
+  border-radius: 0.5rem;
+}
+
 /* Images */
 
 .bottom .github {
@@ -169,7 +188,7 @@ body {
   height: 3rem;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
   .navbar li a {
     padding: 1.3rem;
   }
@@ -177,5 +196,13 @@ body {
   .navbar {
     flex-flow: column;
     align-items: center;
+  }
+
+  .pagination {
+    font-size: 1rem;
+  }
+  .pagination a {
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
   }
 }
